Added phaere_ports.ini metadata file to support AL|EN's "Project Infinity"

--- a/phaere_ports/readme/phaere_ports-readme-english.html
+++ b/phaere_ports/readme/phaere_ports-readme-english.html
@@ -639,7 +639,7 @@
 		<h6>Version 5.0 (12 April 2020)</h6>
 
 		  <ul>
-			<li>Added <em>phaere_ports.ini</em> metadata file to support AL|EN's "Project Infinity"</li>
+			<li>Added <em>phaere_ports.ini</em> metadata file to support AL|EN's "Project Infinity".</li>
 			<li>Replaced `AUTHOR` keyword with `SUPPORT`.</li>
 			<li>Added `VERSION` flag.</li>
 			<li>Replaced `AT_INTERACTIVE_EXIT` deprecated command with `README`.</li>
